--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <h1>Exceptional</h1>
     <h2>Realty Group</h2>
-
+<video src="videofile.ogg" autoplay poster="posterimage.jpg"></video>
     <!-- your code here! See README.md for deliverables -->
 
   </body>
