Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -10,18 +10,11 @@
     <h1>Exceptional</h1>
     <h2>Realty Group</h2>
 
-<video src="videofile.ogg" autoplay poster="posterimage.jpg"></video>
-    <!-- your code here! See README.md for deliverables -->
-    <video controls>
-      <source src="real-estate.mp4" type="video/mp4">
-      <source src="real-estate.ogv" type="video/ogg">
-      <p>Sorry your browser doesn't support HTML5 Video! Please <a href="http://browsehappy.com/?locale=en">upgrade your browser</a>.</p>
+    <video>
+      <source src="https://s3.amazonaws.com/ironboard-learn/cat_video.mp4" type="video/mp4">
+      <source src="https://s3.amazonaws.com/ironboard-learn/cat_video.ogg" type="video/ogg">
+      Your browser does not support HTML5 video  <a href="https://browsehappy.com/" target="_blank">Please upgrade your browser</a>
     </video>
-    <audio controls>
-      <source src="purrr.mp3" type="audio/mp3">
-      <source src="purrr.ogg" type="audio/ogg">
-      <p>Sorry your browser doesn't support HTML5 Audio! Please <a href="http://browsehappy.com/?locale=en">upgrade your browser</a>.</p>
-    </audio>
 
   </body>
 </html>
