--- a/index.html
+++ b/index.html
@@ -10,11 +10,7 @@
     <h1>Exceptional</h1>
     <h2>Realty Group</h2>
 
-    <video>
-      <source src="https://s3.amazonaws.com/ironboard-learn/cat_video.mp4" type="video/mp4">
-      <source src="https://s3.amazonaws.com/ironboard-learn/cat_video.ogg" type="video/ogg">
-      Your browser does not support HTML5 video  <a href="https://browsehappy.com/" target="_blank">Please upgrade your browser</a>
-    </video>
+    <video src="videofile.ogg" autoplay poster="posterimage.jpg"></video>
 
   </body>
 </html>
