--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Exceptional</h1>
     <h2>Realty Group</h2>
 
-    <video src="videofile.ogg" autoplay poster="posterimage.jpg"></video>
+    <video src="videofile.ogg" autoplay controls poster="posterimage.jpg"></video>
 
   </body>
 </html>
