--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Exceptional</h1>
     <h2>Realty Group</h2>
 
-    <video>
+    <video
       <source src="https://s3.amazonaws.com/ironboard-learn/cat_video.mp4" type="video/mp4">
         <source src="https://s3.amazonaws.com/ironboard-learn/cat_video.ogg" type="video/ogg">
       </video>
