--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Exceptional</h1>
     <h2>Realty Group</h2>
 
-    <video controls muted width="320" height="240" video autoplay=autoplay>
+    <video controls muted width="600px" height="400px" video autoplay=autoplay>
                     <source src="Guac.mp4" type="video/mp4">
                 </video>
 
