Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <video controls muted width="600px" height="400px" video autoplay=autoplay>
                     <source src="Guac.mp4" type="video/mp4">
-                      <source src="Guac.mp4" type="video/mp4">
+                      <source src="Guac.mp4" type="video/ogg">
                 </video>
 
   </body>
